@startuml Movie_Reservation_System
entity User {
    user_id: string
    name: string
    address: Address
}

entity Role {
    role_id: string 
    name: RoleEnum
    user_id: string
}

entity Movie {
    movie_id: string
    title: string
    description: string
    durationInMs: integer
    releaseDate: DateTime
    country: string
    poster_image: string
}


entity Genre {
    genre_id: string
    name: string
    movie_id: string
}

entity Booking {
    booking_id: string
    created_date: DateTime
    status: BookingStatus
    price: integer
    user_id: string
    movie_id: string
    seat_id: string
}

entity Seats {
    seat_id: string
    seat_code: string
    available: boolean
}

entity Showtimes {
    showtime_id: string
    show_date: DateTime
    movie_id: string
    seat_id: string
}

enum BookingStatus {
    REQUESTED
    PENDING
    CONFIRMED
    CHECKED_IN
    CANCELED
    ABANDONED
}
enum RoleEnum {
    USER
    ADMIN
}

Movie ||--|{ Genre
Movie ||--|{ Showtimes
User ||--|| Booking
User ||--|{ Role
Booking ||--|{ Seats
Booking ||--|| Movie
Seats ||--|{ Showtimes


@enduml